--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "root",
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "lerna": "^3.20.2",
-    "prettier": "^2.0.0"
-  }
+    "prettier": "^2.0.0",
+    "wrangler": "^0.0.2"
+  },
+  "scripts": {
+    "docs:dev": "yarn --cwd ./docs dev",
+    "docs:build": "yarn --cwd ./docs build",
+    "wrangler:publish": "wrangler publish && rm -rf dist docs/worker"
+  },
+  "workspaces": [
+    "api",
+    "docs"
+  ]
 }
